--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,9 @@
 <resources>
     <string name="app_name">BakingApp</string>
-    <string name="sort_by_popularity">Sort by Popularity</string>
-    <string name="sort_by_top_rated">Sort by Top rated</string>
-    <string name="sort_by_release_date">Sort by Release date</string>
-    <string name="sort_by_revenue">Sort by Revenue</string>
-    <string name="menu_favorites">Favorites</string>
-    <string name="popular_movies">Most Popular Movies</string>
-    <string name="top_rated_movies">Top Rated Movies</string>
-    <string name="recently_released_movies">Recently Released Movies</string>
-    <string name="highest_grossing_movies">Highest Grossing Movies</string>
+    <string name="recipes_load_error">Couldn\'t load recipes</string>
 
-    <!-- Preferences -->
-    <string name="pref_discovery_sort_key" translatable="false">pref_discovery_sort_key</string>
-    <string name="pref_discovery_sort_popularity" translatable="false">popularity</string>
-    <string name="pref_discovery_sort_top_rated" translatable="false">top_rated</string>
-    <string name="pref_discovery_sort_release_date" translatable="false">release_date</string>
-    <string name="pref_discovery_sort_revenue" translatable="false">revenue</string>
-    <string name="pref_discovery_sort_favorites" translatable="false">favorites</string>
-    <string name="pref_discovery_sort_default" translatable="false">@string/pref_discovery_sort_popularity</string>
 
-    <!--Discovery-->
-    <string name="discovery_load_error">Couldn\'t load movies</string>
+    <!-- OBSOLETE -->
 
     <!-- Movie Details -->
     <string name="movie_detail_rate_format">%.1f/10</string>
