--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">BakingApp</string>
     <string name="recipes_load_error">Couldn\'t load recipes</string>
     <string name="ingredients_label">Ingredients</string>
+    <string name="show_ingredients">See ingredients</string>
     <string name="recipe_summary_template">Ingredients: %s</string>
-    <string name="ingredient_quantity_template">%s %s</string>
+    <string name="ingredient_quantity_template">%s \t%s</string>
+    <string name="step_no_description">No description available.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_step_list">Steps</string>
